<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"

        android:padding="16dp">

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:text="@string/judul_TA"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/bme"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>


        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/nama"/>

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:text="@string/nrp"/>

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/pembimbing_1"/>

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:text="@string/pembimbing_2"/>


        <Button
            android:id="@+id/btn_search_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_search_activity"
            android:textSize="12sp"/>

        <TextView
            style="@style/TextContent"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/departemen_teknik_biomedik"/>

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/fakultas_teknologi_elektro_dan_informatika_cerdas"/>

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/institut_teknologi_sepuluh_nopember"/>

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:text="@string/_2023"/>



    </LinearLayout>

</ScrollView>