<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AnalisaData.AnalisaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        tools:context=".View.AnalisaData.AnalisaActivity">

        <TextView
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_audio"
            android:maxLines="1"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/namaAudioAnalisa"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pemrosesan_sinyal"
            android:id="@+id/btnProses"
            android:layout_margin="4dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:layout_marginTop="8dp"
            android:id="@+id/chartProcess"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <ToggleButton
            android:id="@+id/toggleButtonS1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/show_thresholdS2"
            android:textOff="@string/hide_threshold"
            android:layout_gravity="center"
            />

        <ToggleButton
            android:id="@+id/toggleButtonS2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/show_threshold"
            android:textOff="@string/hide_thresholdS2"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="S1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="S2"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewS1"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Titik S1"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textViewS2"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Titik S2"
                android:textAlignment="center"/>


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pemrosesan_frekuensi"
            android:id="@+id/btnFrekuensi"
            android:layout_marginTop="8dp"
            android:layout_margin="4dp"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chartFFT"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <TextView
            android:id="@+id/MPF"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nilai MPF"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:src="@drawable/bme" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:src="@drawable/its" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>